k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: notes-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: notes-api-app
          image: 916205284554.dkr.ecr.us-east-1.amazonaws.com/notes-api-app:2ace02516aafeb084f67dbf929814467e1b48b0d
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"  
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: notes-app
spec:
  type: ClusterIP
  selector:
    app: notes-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
